feat: refactor compiler to improve assignment handling and add support for less-than comparisons